front-gateway/src/components/ApartmentForm/SelectUploadMode.scss
@import "../sharedStyles/bsvars.scss";
@import "../sharedStyles/variables.scss";

.select-upload-mode-wrapper {
  text-align: center;
  padding-top: 30px;
  background-color: $gray-lighter;
  margin: 0 auto;
}

.select-upload-mode-header {
  margin-top: 40px;
}

.select-upload-mode-title {
  font-size: 18px;
  line-height: 21px;
  color: $brand-brown;
  padding: 0 10px;
  margin-bottom: 12px;
}

.select-upload-mode-subtitle,
.select-upload-mode-footer {
  font-size: 15px;
  line-height: 17px;
  text-align: center;
  color: #9b9b9b;
  padding: 0 20px;

  a,
  a:visited {
    font-size: 15px;
    color: #3398db;
  }
}

.select-upload-mode-items-wrapper {
  padding: 40px 0;
  height: 100%;
  width: 100%;
  max-width: 600px;
  margin: 0 auto;
}

.select-upload-mode-item {
  display: inline-block;
  height: 230px;
  width: 250px;
  border-radius: 4px;
  background-color: $brand-white;
  color: $brand-brown;
  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
  font-size: 16px;

  @media (max-width: $screen-sm-max) {
    margin-bottom: 15px;
  }

  .select-upload-mode-item-icon {
    margin-top: 45px;
    margin-bottom: 35px;
  }

  .select-upload-mode-item-subtext {
    color: $gray-light;
  }
}

